Re-structure and add styles to canvas page

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 		<script src="/in/js.js"></script>
 	</head>
 	<body class="client">
-		<canvas id="canvas" width="100%" height="100%"></canvas>
+		<a href="/admin.html" id="adminLink" target="_blank">Config</a>
+		<canvas id="canvas"></canvas>
 	</body>
 </html>
