Adding admin identifier to client

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,8 @@
 		<script src="/in/js.js"></script>
 	</head>
 	<body class="client">
-		<a href="/admin.html" id="adminLink" target="_blank">Config</a>
+		<a id="adminLink" href="/admin.html" target="_blank">Config</a>
+		<div id="adminNum">...</div>
 		<canvas id="canvas"></canvas>
 	</body>
 </html>
