--- a/www/admin.html
+++ b/www/admin.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="/in/admin.css">
 		<script src="/in/jquery-1.9.1.min.js"></script>
+		<script src="/in/raphael-2.1.0.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/in/admin.js"></script>
 	</head>
@@ -17,10 +18,7 @@
 			</li>
 			<li>
 				<p>Screen Location Control</p>
-				<svg width="100%" height="200" id="screenLayout">
-					<text x="50" y="50" class="screenID">Stuff</text>
-					<rect width="20" height="20" class="screen" x="40" y="40" />
-				</svg>
+				<div id="screenLayout"></div>
 			</li>
 		</ul>
 	</body>
