fixing a few problems, sexifying code, etc...

--- a/www/admin.html
+++ b/www/admin.html
@@ -10,7 +10,7 @@
 	<body class="admin">
 		<hgroup>
 			<h1>Distributed Particle System Administrator</h1>
-			<h2>By: Nathan Woods and CS389 Students</h2>
+			<h2>By: John Appleby, Joe Morgan, and Nathan Woods</h2>
 		</hgroup>
 		<ul class="adminList">
 			<li>
