--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="/in/css.css">
-		<script src="/in/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="/in/fullscreen-api.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/in/js.js"></script>
