--- a/www/admin.html
+++ b/www/admin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="/in/admin.css">
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" href="/in/admin.css">
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="/in/raphael-2.1.0.min.js"></script>
@@ -16,10 +16,8 @@
 		</hgroup>
 		<ul class="adminList">
 			<li>
-				<h3 class="ui-state-default ui-corner-all ui-helper-clearfix">General Admin Controls</h3>
-				<p>
-					<input id="chk_isadmin" type="checkbox" /><label for="chk_isadmin">Display numbers on screens</label>
-					<input id="chk_active" type="checkbox"/><label for="chk_active">Animation active</label>
+				<h3>General Admin Controls</h3>
+				<div>
 					<p>
 						<label for="txt_speed">Maximum object speed (x and y directions):</label>
 						<input type="text" id="txt_speed" />
@@ -35,24 +33,30 @@
 						<input type="text" id="txt_render" />
 						<div id="adj_txt_render"></div>
 					</p>
+					<input id="chk_isadmin" type="checkbox" /><label for="chk_isadmin">Display numbers on screens</label>
+					<input id="chk_active" type="checkbox"/><label for="chk_active">Animation active</label>
 					<button id="btn_reset">Reset (Cancel) changes</button>
 					<button id="btn_save">Save changes</button>
-				</p>
+				</div>
 			</li>
 			<li>
-				<h3 class="ui-state-default ui-corner-all ui-helper-clearfix">Screen Location Control</h3>
-				<div id="screenLayout"></div>
-				<button id="btn_clear">Clear screen</button>
-				<button id="btn_store">Store configuration</button>
-				<button id="btn_reset">Reset configuration</button>
+				<h3>Screen Location Control (under construction)</h3>
+				<div>
+					<div id="screenLayout"></div>
+					<button id="btn_clear">Clear screen</button>
+					<button id="btn_store">Store configuration</button>
+					<button id="btn_reset">Reset configuration</button>
+				</div>
 			</li>
 			<li>
-				<h3 class="ui-state-default ui-corner-all ui-helper-clearfix">Know issues:</h3>
-				<ul>
-					<li>Issues with lost connections, re-numbered frames</li>
-					<li>Gaps can accuire over many screen manipulations</li>
-					<li>Configuratons are not stored at this point in time</li>
-				</ul>
+				<h3>Know Issues:</h3>
+				<div>
+					<ul>
+						<li>Issues with lost connections, re-numbered frames</li>
+						<li>Gaps can accuire over many screen manipulations</li>
+						<li>Configuratons are not stored at this point in time</li>
+					</ul>
+				</div>
 			</li>
 		</ul>
 	</body>
