--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,17 @@
 		<title>Distributed Particle System</title>
 	</head>
 	<body>
-		<a id="adminLink" href="/admin.html" target="_blank">Config</a>
-		<div id="adminNum">...</div>
-		<canvas id="canvas"></canvas>
+		<div id="dialog" class="dialog hide">
+			<div class="content">
+				<div class="buttons">
+					<button id="close" class="click close">×</button>
+					<button id="save" class="click save">💾</button>
+				</div>
+			</div>
+		</div>
+		<a id="link" class="link" href="#admin">Config</a>
+		<div id="num" class="num">...</div>
+		<canvas id="canvas" class="canvas"></canvas>
 		<script src="client.js"></script>
 	</body>
 </html>
