--- a/client/index.html
+++ b/client/index.html
@@ -8,15 +8,14 @@
 	<body>
 		<div id="dialog" class="dialog hide">
 			<div class="content">
-				<div class="buttons">
-					<button id="close" class="click close">×</button>
-					<button id="save" class="click save">💾</button>
-				</div>
+				<button id="close" class="close">×</button>
+				<button id="save" class="save">💾</button>
 			</div>
 		</div>
 		<a id="link" class="link" href="#admin">Config</a>
-		<div id="num" class="num">...</div>
+		<div id="num" class="num hide">...</div>
 		<canvas id="canvas" class="canvas"></canvas>
 		<script src="client.js"></script>
+		<script src="magic.js"></script>
 	</body>
 </html>
