Adding all the fun things my brain has been playing with

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
 		<a id="link" class="link" href="#admin">Config</a>
 		<div id="num" class="num hide">...</div>
 		<canvas id="canvas" class="canvas"></canvas>
+		<!-- <script src="https://raw.github.com/dataarts/dat.gui/master/build/dat.gui.min.js"></script> -->
 		<script src="client.js"></script>
 	</body>
 </html>
